--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,19 +10,7 @@
 </head>
 <body>
     <h1>Messi, The Best Football Player in The History</h1>
+    <h2>NEYMAR
+        
+    </h2>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="">
-</head>
-<body>
-    <h1>Messi, The Best Football Player in The History</h1>
-</body>
->>>>>>> 6d3969da45ab436d926caf4b7fb655418df70e01
-</html>
